@@ -507,3 +507,4 @@ v71.1
 
 nfqws,tpws: much faster ipset implementation. move from hash to avl tree
 install_easy: stop if running embedded release on traditional linux system (some files missing)
+install_bin: add "read elf" arch detection method
